# salesforce-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
src/: config.rs  errors.rs  extractors.rs  lib.rs  main.rs  organization.rs  requests.rs  responses.rs  router.rs  salesforce.rs
src/extractors/: extract_org.rs  mod.rs  resolve_service.rs  validation.rs
src/salesforce/: factory.rs  mod.rs  service.rs
