[package]
name = "salesforce-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilitiy crates
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Network crates
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"

# Logging crates
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
