[package]
name = "salesforce-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilitiy crates
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"

# Network crates
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Logging crates
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AWS crates
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.9.0"

[lib]
name = "salesforce"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"
